# Earwig

./: .gitignore  BUILDING.md  Cargo.toml  README.md  config.example.toml  earwig.service
src/: audio.rs  config.rs  input.rs  main.rs  transcription.rs
voice-memo-spec/: CONTENTS.md  IMPLEMENTATION.md  SPEC.md
