[package]
name = "earwig"
version = "0.1.0"
edition = "2021"

[dependencies]
# Input handling
evdev = "0.12"

# Audio capture and WAV writing
cpal = "0.15"
hound = "3.5"

# HTTP client for Whisper and ntfy
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Timestamps
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Directory utilities
dirs = "5.0"
